k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-monitor
  template:
    metadata:
      labels:
        app: log-monitor
    spec:
      containers:
      - name: log-monitor
        image: aamir017/log-monitor:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
