k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-monitor
spec:
  type: NodePort
  selector:
    app: log-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
